styling the dropdown ii

--- a/backup_code/adder.html
+++ b/backup_code/adder.html
@@ -9,9 +9,9 @@
     <button class="annotator-adder-actions__button h-icon-highlight js-highlight-btn dropdown">
       <span class="annotator-adder-actions__label" data-action="highlight">Colors</span>
       <div class="dropdown-content">
-          <li class="annotator-adder-actions__label h-icon-highlight red" data-action="highlight">Red</li>
+          <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: red;">Red</li>
           <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: blue;">Blue</li>
-          <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: yellow;">Yellow</li>
-    </button>
+          <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: rgb(247, 238, 55);">Yellow</li>
+    </button>s
   </hypothesis-adder-actions>
 </hypothesis-adder-toolbar>
