styling the dropdown

--- a/backup_code/adder.html
+++ b/backup_code/adder.html
@@ -7,11 +7,12 @@
         the class "js-highlight-btn" sends us to adder.js -> guest.coffee -> index.coffee to handle the highlighting. It grabs the color from variables.scss.
     -->
     <button class="annotator-adder-actions__button h-icon-highlight js-highlight-btn dropdown">
-      <span class="annotator-adder-actions__label" data-action="highlight">Colors</span>
+      <span class="annotator-adder-actions__label" data-action="highlight">Highlight</span>
       <div class="dropdown-content">
-          <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: red;">Red</li>
-          <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: blue;">Blue</li>
-          <li class="annotator-adder-actions__label h-icon-highlight" data-action="highlight" style="color: rgb(247, 238, 55);">Yellow</li>
-    </button>s
+          <li class="h-icon-highlight red" data-action="highlight">
+          <li class="h-icon-highlight blue" data-action="highlight">
+          <li class="h-icon-highlight yellow" data-action="highlight">
+      </div>
+    </button>
   </hypothesis-adder-actions>
 </hypothesis-adder-toolbar>
